# jaga-assessment

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml  formatter.yml  release.yml
compose/: README.md  docker-compose.yml
jaga/: app.py  config.py  db.py  error.py
jaga/auth/: __init__.py  authlib.py  decorators.py
jaga/models/: __init__.py  auth.py  task.py
jaga/schemas/: task.py
jaga/views/: __init__.py  auth.py  basic.py  openapi.py  task.py
tests/: conftest.py  test_view_openapi.py  test_view_task.py  test_view_task_auth.py
