[project]
name = "jaga"
version = "0.1.0"
description = "A Flask application to retrieve and manage tasks"
dependencies = [
    "PyYaml==6.0.3",
    "flask==3.1.2",
    "flask-sqlalchemy==3.1.1",
    "Flask-Migrate==4.1.0",
    "psycopg2-binary==2.9.11",
    "flask-marshmallow==1.3.0",
    "flask_smorest==0.46.2",
]

[project.optional-dependencies]
develop = [
    "pytest",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
